...
            )
        }.orEmpty()
    }
}

const val SELECTION_BAR_TAG: String = "selection-bar"
const val SELECTION_ACTIONS_TAG: String = "selection-actions"

private const val MAX_SAVED_SELECTION = 500

@Composable
fun <T> SelectableMediaList(
    place: String,
...
